CSS changes to fix mis-alignment of icons in the corner of panels, specifically: - Dashboard page event panel - Users page user panel - Assignment wizard teams panel

--- a/OSBLEPlus/trunk/development/OSBLE.Web/Areas/AssignmentWizard/Content/css/team.css
+++ b/OSBLEPlus/trunk/development/OSBLE.Web/Areas/AssignmentWizard/Content/css/team.css
@@ -103,7 +103,8 @@
 .TeamNameTextBox
 {
     border:none;
-    width:175px;
+    width:160px;
+    float: left;
     font-weight:bold;
 }
     
